Notebooks Style Renewal

--- a/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
@@ -2,21 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "453b9f9e",
+   "id": "0086c01d",
    "metadata": {},
    "source": [
-    "---\n",
+    "# <span style=\"font-width:bold; font-size: 3rem; color:#1EB182;\"><img src=\"images/icon102.png\" width=\"38px\"></img> **Hopsworks Feature Store** </span><span style=\"font-width:bold; font-size: 3rem; color:#333;\">- Part 01: Load, Engineer & Connect</span>\n",
     "\n",
-    "# Feature Store Tour - Python API\n",
+    "<span style=\"font-width:bold;\"> This is the first part of the quick start series of tutorials about Hopsworks Feature Store. As part of this first module, we will work with data related to credit card transactions. \n",
+    "The objective of this tutorial is to demonstrate how to work with the **Hopworks Feature Store**  for batch data with a goal of training and deploying a model that can predict fraudulent transactions.</span>\n",
     "\n",
-    "This set of notebooks contain a tour/reference for the Hopsworks feature store Scala/Java API. The notebook is meant to be run from feature store demo projects on Hopsworks. We will go over best practices for using the API as well as common pitfalls.\n",
+    "## **🗒️ This notebook is divided in 3 sections:** \n",
+    "1. Connect to the Hopsworks feature store. \n",
+    "2. Loading the data and feature engineeing.\n",
+    "3. Create feature groups and upload them to the feature store.\n",
     "\n",
-    "There are 3 notebooks:\n",
-    "- Feature groups: Discover how to work with features and feature groups, both offline and online\n",
-    "- [Feature Exploration](./feature_exploration.ipynb): Discover how to join features from different feature groups\n",
-    "- [Training datasets](./training_datasets.ipynb): Discover how to save training datasets to be used by ML models\n",
-    "\n",
-    "The data required to run this tour is located in a zip file called `archive.zip` in the same directory as the notebooks. Head to the Dataset browser on Hopsworks and unzip it.\n",
+    "![tutorial-flow](images/01_featuregroups.png)\n",
     "\n",
     "## 🧑🏻‍🏫 Features and Feature Groups\n",
     "\n",
@@ -46,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "25448ea5",
+   "id": "b6ea3694",
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ec0c2a",
+   "id": "5a558612",
    "metadata": {},
    "source": [
     "> Using `hdfs` we can get **project name** using `hdfs.project_name()` method and **project path** using `hdfs.project_path()` method."
@@ -79,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "924f86ca",
+   "id": "99833de7",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d3d81211",
+   "id": "2d587520",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "660af00c",
+   "id": "52d94e2d",
    "metadata": {},
    "source": [
     "---\n",
@@ -139,16 +138,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67943967",
+   "id": "d98e04ed",
    "metadata": {},
    "source": [
-    "### ⬇️ Loading Data"
+    "## <span style=\"color:#ff5f27;\"> 💽 Loading Data </span>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "34dec83d",
+   "id": "78abfc4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bbf9f084",
+   "id": "ab254d1b",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e65fc400",
+   "id": "6b119b74",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3c09236e",
+   "id": "52ee130a",
    "metadata": {},
    "outputs": [
     {
@@ -495,17 +494,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fd37fe7",
+   "id": "460fa9da",
    "metadata": {},
    "source": [
     "---\n",
-    "## 🧑🏻‍🔬 👷🏼‍♂️ Feature Engineering and Feature Group Creation"
+    "## <span style=\"color:#ff5f27;\"> 🛠 🪄 Feature Engineering and Feature Group Creation </span>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ace55b58",
+   "id": "d0599c78",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dbf0c47f",
+   "id": "eaec517e",
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b4c904f6",
+   "id": "274fcaac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fb9338e",
+   "id": "4b04b1b8",
    "metadata": {},
    "source": [
     "Up to this point we have just created the metadata object representing the feature group. However, we haven't saved the feature group in the feature store yet. To do so, we can call the method `save` on the metadata object created in the cell above."
@@ -702,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ec0293da",
+   "id": "e740d8ff",
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "235f2f74",
+   "id": "7b707b48",
    "metadata": {},
    "source": [
     "#### ⛳️ Sales Dataset\n",
@@ -742,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f920c7c5",
+   "id": "36b456c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8dd37859",
+   "id": "f930ced9",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3db64d6f",
+   "id": "7b82cb07",
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3e865967",
+   "id": "96ed71f7",
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa81e3b6",
+   "id": "58b5db0c",
    "metadata": {},
    "source": [
     "When creating a feature group we can also specify a `partition key`. Partition keys help organize the feature data on the file system and improve performances when reading the feature group data. As for the `primary key`, also `partition key` can be a composite one."
@@ -1081,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0644be71",
+   "id": "fdefc648",
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8180280e",
+   "id": "f25ef618",
    "metadata": {},
    "source": [
     "You can enable a feature group to be online by setting the `online_enabled` flag to true. \n",
@@ -1133,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4368ed82",
+   "id": "cc8d231d",
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31e7fff6",
+   "id": "6cd72160",
    "metadata": {},
    "source": [
     "#### ⛳️ Exogenous Dataset \n",
@@ -1182,7 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7a746d02",
+   "id": "46b22fa9",
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "fa5e5432",
+   "id": "dacfce5d",
    "metadata": {},
    "outputs": [
     {
@@ -1368,12 +1367,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "343bf455",
+   "id": "5bc0624a",
    "metadata": {},
    "source": [
     "---\n",
-    "\n",
-    "## 🔮 Append additional data\n",
+    "## <span style=\"color:#ff5f27;\"> 🔮 Append additional data </span>\n",
     "\n",
     "You can add additional data to a feature group by calling the `insert` method. In the example below we assume that we got also the data for 2013 and we are going to append it to the existing `exogenous_fg`."
    ]
@@ -1381,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5aabd74b",
+   "id": "5e49ea94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,7 +1390,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a7565bb8",
+   "id": "0ff663b3",
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64455dc1",
+   "id": "d4fc78d3",
    "metadata": {},
    "source": [
     "This will also recompute statistics after inserting new data. The new statistics will be saved along the metadata with a new commit time."
@@ -1423,12 +1421,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b479f5d5",
+   "id": "ecac014a",
    "metadata": {},
    "source": [
     "---\n",
-    "\n",
-    "## 🔮 Append an additional feature\n",
+    "## <span style=\"color:#ff5f27;\"> 🔮 Append an additional feature </span>\n",
     "\n",
     "Appending features to a feature group is a non-breaking schema change compared to removing features, which will require creating a new version of the feature group.\n",
     "\n",
@@ -1438,7 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "be2dea4c",
+   "id": "1931bffa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1445,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "617ef459",
+   "id": "3824fea0",
    "metadata": {},
    "outputs": [
     {
@@ -1477,19 +1474,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ff5a885",
+   "id": "02cb9254",
    "metadata": {},
    "source": [
     "---\n",
-    "## 🧬 Delete a feature group\n",
+    "## <span style=\"color:#ff5f27;\"> 🧬 Delete a feature group </span>\n",
     "\n",
     "You can call the `delete` method on a feature group to delete the entire feature group."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "92919f71",
+   "execution_count": 24,
+   "id": "3546f233",
    "metadata": {},
    "outputs": [
     {
@@ -1500,6 +1497,16 @@
       "Launching offline feature group backfill job...\n",
       "Backfill Job started successfully, you can follow the progress at https://1e87e1e0-e1b3-11ec-8067-e932b2b957b4.cloud.hopsworks.ai/p/122/jobs/named/exogenous_fg_3_offline_fg_backfill/executions\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<hsfs.core.job.Job at 0x7f9f99738940>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1517,8 +1524,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9ac2df58",
+   "execution_count": 25,
+   "id": "1523246c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1532,10 +1539,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffe23a49",
+   "id": "677e21d9",
    "metadata": {},
    "source": [
-    "---"
+    "---\n",
+    "\n",
+    "## <span style=\"color:#ff5f27;\">⏭️ **Next:** Part 02 </span>\n",
+    "\n",
+    "In the following notebook we will explore feature groups."
    ]
   }
  ],
