--- a/notebooks/featurestore/hsfs/basics/feature_exploration.ipynb
+++ b/notebooks/featurestore/hsfs/basics/feature_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e74c425b",
+   "id": "e00af45d",
    "metadata": {},
    "source": [
     "---\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "791157c0",
+   "id": "0b9bde8f",
    "metadata": {},
    "outputs": [
     {
@@ -45,12 +45,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6962b2ff",
+   "id": "02809f11",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "# 🕵🏻‍♂️ Explore feature groups\n",
+    "## <span style=\"color:#ff5f27;\"> 🕵🏻‍♂️ Explore feature groups </span>\n",
     "\n",
     "You can interact with the feature groups as if they were Spark dataframe. A feature group object has a `show()` method, to show `n` number of lines, and a `read()` method to read the content of the feature group in a Spark dataframe.\n",
     "\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a6193cb2",
+   "id": "3c04f8f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9bbe1faf",
+   "id": "cb866ad9",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "660e6e58",
+   "id": "eabd929d",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0fbddd73",
+   "id": "86f1e638",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b84b1bc6",
+   "id": "abacffed",
    "metadata": {},
    "source": [
     "You can also inspect the metadata of the feature group. You can, for instance, show the features the feature group is made of and if they are primary or partition keys:"
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "705dc6b5",
+   "id": "4bfc6259",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "217776ac",
+   "id": "3ca6a56f",
    "metadata": {},
    "source": [
     "If you are interested only in a subset of features, you can use the `select()` method on the feature group object to select a list of features. The `select()` behaves like a feature group, as such, you can call the `.show()` or `.read()` methods on it."
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "65bbd20b",
+   "id": "fb4c6301",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44ae2066",
+   "id": "e7cf68dc",
    "metadata": {},
    "source": [
     "If your feature group is available both online and offline, you can use the `online` option of the `show()` and `read()` methods to specify if you want to read your feature group from online storage."
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b212d10f",
+   "id": "96ff06f9",
    "metadata": {},
    "outputs": [
     {
@@ -632,12 +632,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63df6aeb",
+   "id": "4359605c",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "## 👮🏼‍♀️ Filter Feature Groups\n",
+    "## <span style=\"color:#ff5f27;\"> 👮🏼‍♀️ Filter Feature Groups </span>\n",
     "\n",
     "If you do not want to read your feature group into a dataframe, you can also filter directly on a `FeatureGroup` object. Applying a filter to a feature group returns a `Query` object which can subsequently be used to be further joined with other feature groups or queries, or it can be materialized as a training dataset."
    ]
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ac743dcc",
+   "id": "146c010c",
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d76d5e5",
+   "id": "e8be1f2f",
    "metadata": {},
    "source": [
     "Conjunctions of filters can be constructed using the Python Bitwise Operators `|` and `&` which replace the regular binary operators when working with feature groups and filters."
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "56306097",
+   "id": "fde39a17",
    "metadata": {},
    "outputs": [
     {
@@ -842,12 +842,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86ac2034",
+   "id": "ecb348a7",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "## 👷🏼‍♂️ Join Features and Feature Groups\n",
+    "## <span style=\"color:#ff5f27;\"> 👷🏼‍♂️ Join Features and Feature Groups </span>\n",
     "\n",
     "HSFS provides an API similar to Pandas to join feature groups together and to select features from different feature groups.\n",
     "The easies query you can write is by selecting all the features from a feature group and join them with all the features of another feature group.\n",
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c0e8fcd9",
+   "id": "d63bd025",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e27be93",
+   "id": "5dedc1e9",
    "metadata": {},
    "source": [
     "You can use the query object to create training datasets (see training dataset notebook). You can inspect the query generated by calling the `to_string()` method on it."
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "16e59af5",
+   "id": "bb13a762",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d67a609",
+   "id": "19f6b7bc",
    "metadata": {},
    "source": [
     "As for the feature groups, you can call the `show()` method to inspect the data before generating a training dataset from it. Or you can call the `read()` method to get a Spark DataFrame with the result of the query and apply additional transformations to it."
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e07142e9",
+   "id": "7742f58d",
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6c3ca96",
+   "id": "beceabe7",
    "metadata": {},
    "source": [
     "As for the `show()` and `read()` method of the feature group, even in the case of a query you can specify against which storage to run the query."
@@ -1165,12 +1165,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cc2ccbc",
+   "id": "8577bc9a",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "### 💼 Select only a subset of features\n",
+    "## <span style=\"color:#ff5f27;\"> 💼 Select only a subset of features </span>\n",
     "\n",
     "You can replace the `select_all()` method with the `select([])` method to be able to select only a subset of features from a feature group you want to join:"
    ]
@@ -1178,7 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "003cc729",
+   "id": "5edbb342",
    "metadata": {},
    "outputs": [
     {
@@ -1280,12 +1280,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d12d6a25",
+   "id": "f6d1fb2d",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "## 💈 Overwrite the joining key\n",
+    "## <span style=\"color:#ff5f27;\"> 💈 Overwrite the joining key </span>\n",
     "\n",
     "If your feature groups don't have a primary key, or if they have different names or if you want to overwrite the joining key, you can pass it as a parameter of the join.\n",
     "\n",
@@ -1295,7 +1295,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5dd37455",
+   "id": "f4f3a266",
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5243b5a2",
+   "id": "230bea8f",
    "metadata": {},
    "source": [
     "### Overwriting the join type\n",
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "21f74d4e",
+   "id": "f03c6ed9",
    "metadata": {},
    "outputs": [
     {
@@ -1430,12 +1430,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97c808fc",
+   "id": "406ac2e4",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "### 🧲 Join mulitple feature groups\n",
+    "## <span style=\"color:#ff5f27;\"> 🧲 Join mulitple feature groups </span>\n",
     "\n",
     "You can concatenate as many feature gropus as you wish. In the example below the order of execution will be:\n",
     "\n",
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1dbf5e0d",
+   "id": "012727a7",
    "metadata": {},
    "outputs": [
     {
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e08fe2f2",
+   "id": "dbd60fb7",
    "metadata": {},
    "source": [
     "### Use Joins together with Filters\n",
@@ -1490,7 +1490,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "46d8d2e8",
+   "id": "42684cbd",
    "metadata": {},
    "outputs": [
     {
@@ -1516,12 +1516,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf2b9a9f",
+   "id": "f7cd5f68",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "### 🔮 Free hand query\n",
+    "## <span style=\"color:#ff5f27;\"> 🔮 Free hand query </span>\n",
     "\n",
     "With HSFS you are free of writing skipping entirely the Hopsworks query constructor and write your own query. This functionality can be useful if you need to express more complex queries for your use case. `fs.sql` returns a Spark Dataframe."
    ]
@@ -1529,7 +1529,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "06e4dced",
+   "id": "45922d76",
    "metadata": {},
    "outputs": [
     {
@@ -1685,10 +1685,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb931a56",
+   "id": "15548a89",
    "metadata": {},
    "source": [
-    "---"
+    "---\n",
+    "## <span style=\"color:#ff5f27;\">⏭️ **Next:** Part 03 </span>\n",
+    "\n",
+    "In the following notebook we will use our feature groups to create a dataset we can train a model on."
    ]
   }
  ],
