--- a/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
+++ b/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
@@ -2,7 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a0ebfe2",
+   "id": "e9d75d62",
+   "metadata": {},
+   "source": [
+    "# <span style=\"font-width:bold; font-size: 3rem; color:#1EB182;\"><img src=\"images/icon102.png\" width=\"38px\"></img> **Hopsworks Feature Store** </span><span style=\"font-width:bold; font-size: 3rem; color:#333;\">- Part 03: Training Data & Feature views</span>\n",
+    "\n",
+    "<span style=\"font-width:bold; font-size: 1.4rem;\">This is the third part of the quick start series of tutorials about Hopsworks Feature Store. This notebook explains how to read from a feature group and create training dataset within the feature store</span>\n",
+    "\n",
+    "## **🗒️ In this notebook we will see how to create a training dataset from the feature groups:** \n",
+    "1. **Select the features** we want to train our model on,\n",
+    "2. **How the features should be preprocessed,**\n",
+    "3. **Create a Feature View**.\n",
+    "3. **Create a dataset split** for training and validation data.\n",
+    "\n",
+    "![tutorial-flow](images/02_training-dataset.png) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d0872a4",
    "metadata": {},
    "source": [
     "---\n",
@@ -23,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eae46c56",
+   "id": "62881e3d",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa593821",
+   "id": "e6805d6f",
    "metadata": {},
    "source": [
     "---"
@@ -54,10 +72,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2955ff6b",
+   "id": "c6963f49",
    "metadata": {},
    "source": [
-    "## 🔮 Create a `Feature View` from a query\n",
+    "## <span style=\"color:#ff5f27;\">⚙️ Feature View Creation</span>\n",
     "\n",
     "In the previous notebook ([feature_exploration](./feature_exploration.ipynb)) we walked through how to explore and query the Hopsworks feature store using HSFS. We can use the queries produced in the previous notebook to create a `Feature Views`."
    ]
@@ -65,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "95ac11a9",
+   "id": "111e39cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d1e3188",
+   "id": "a53ab9be",
    "metadata": {},
    "source": [
     "In order to create Feature View we can use `FeatureStore.create_feature_view()` method."
@@ -94,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a8872468",
+   "id": "d6a2e7db",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5e249572",
+   "id": "b3c7109c",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5ce2013",
+   "id": "56014c38",
    "metadata": {},
    "source": [
     "For now `Feature View` is saved in Hopsworks and we can retrieve it using `FeatureStore.get_feature_view()`"
@@ -145,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4d626dbc",
+   "id": "99728c79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "13474e8b",
+   "id": "5730a851",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74992b49",
+   "id": "da2a37cf",
    "metadata": {},
    "source": [
     "> `FeatureView.preview_feature_vector()` returns a sample of assembled serving vector from online feature store"
@@ -187,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8c9db6a3",
+   "id": "15d31ab1",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fa5e340",
+   "id": "5f0bcc0e",
    "metadata": {},
    "source": [
     "> To get subset of data use `FeatureView.get_batch_data()` "
@@ -231,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8a0f7b2b",
+   "id": "560f0f24",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b00b26cd",
+   "id": "6742fc72",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "283321e8",
+   "id": "fbf5efa6",
    "metadata": {},
    "outputs": [
     {
@@ -470,16 +488,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8767ba4",
+   "id": "d2c5b63f",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "## 🧑🏻‍🔬 Training Dataset Creation\n",
+    "## <span style=\"color:#ff5f27;\">🏋️‍♀️ Training Dataset Creation</span>\n",
+    "\n",
+    "In Hopsworks training data is a query where the projection (set of features) is determined by the parent FeatureView with an optional snapshot on disk of the data returned by the query.\n",
+    "\n",
+    "**Training Dataset  may contain splits such as:** \n",
+    "* Training set - the subset of training data used to train a model.\n",
+    "* Validation set - the subset of training data used to evaluate hparams when training a model\n",
+    "* Test set - the holdout subset of training data used to evaluate a mode\n",
     "\n",
     "To create training dataset we use `FeatureView.create_training_dataset()` method.\n",
     "\n",
-    "⚠️ Some important things:\n",
+    "⚠️ **Some important things**:\n",
     "- It will inherit the name of FeatureView.\n",
     "\n",
     "- The feature store currently supports the following data formats for\n",
@@ -495,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "666c5900",
+   "id": "d4f783c4",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bc2b861e",
+   "id": "84422291",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03975956",
+   "id": "b3f3b861",
    "metadata": {},
    "source": [
     "If we want to load dataset from Hopsworks we can use `FeatureView.get_training_dataset_splits()` method.\n",
@@ -551,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1ed33a4a",
+   "id": "4b704f54",
    "metadata": {},
    "outputs": [
     {
@@ -765,12 +790,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79dc44fa",
+   "id": "69c6e008",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "# 🔮 Creating Training Datasets with Event Time filter\n",
+    "## <span style=\"color:#ff5f27;\">🔮 Creating Training Datasets with Event Time filter </span>\n",
     "\n",
     "First of all lets import **datetime** from datetime library and set up a time format.\n",
     "\n",
@@ -782,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "176a6729",
+   "id": "f1fad30f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "71cdb756",
+   "id": "a3c9b07f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b571aac0",
+   "id": "86038e21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f5c99e89",
+   "id": "db9da079",
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8feecca0",
+   "id": "e4e4ac58",
    "metadata": {},
    "outputs": [
     {
@@ -870,10 +895,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d834fcd0",
+   "id": "973a8c3b",
    "metadata": {},
    "source": [
-    "### 🔬 Dataset Retrieving\n",
+    "---\n",
+    "## <span style=\"color:#ff5f27;\"> 🪝 Training Dataset retreival </span>\n",
     "\n",
     "To retrieve training dataset from Feature Store we can use `get_training_dataset_splits()` or `get_training_dataset()` methods. \n",
     "\n",
@@ -884,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8e186751",
+   "id": "02d706dc",
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a714efc",
+   "id": "18b0def4",
    "metadata": {},
    "source": [
     "---"
