--- a/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
+++ b/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "91dca9f0",
+   "id": "8432191a",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Training Datasets\"\n",
+    "date: 2021-02-24\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc587dc9",
    "metadata": {},
    "source": [
     "# <span style=\"font-width:bold; font-size: 3rem; color:#1EB182;\"><img src=\"images/icon102.png\" width=\"38px\"></img> **Hopsworks Feature Store** </span><span style=\"font-width:bold; font-size: 3rem; color:#333;\">- Part 03: Training Data & Feature views</span>\n",
@@ -20,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "848a01a1",
+   "id": "3ec59788",
    "metadata": {},
    "source": [
     "---\n",
@@ -40,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d4030175",
+   "id": "a1ef190d",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22dc6068",
+   "id": "34e9aa5c",
    "metadata": {},
    "source": [
     "---"
@@ -71,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b900203a",
+   "id": "997d01a0",
    "metadata": {},
    "source": [
     "## <span style=\"color:#ff5f27;\">⚙️ Feature View Creation</span>\n",
@@ -82,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9763c7a9",
+   "id": "97963f18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c0d46f8",
+   "id": "076c263a",
    "metadata": {},
    "source": [
     "In order to create Feature View we can use `FeatureStore.create_feature_view()` method."
@@ -111,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e26c2c71",
+   "id": "f50f6e23",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "25ba736f",
+   "id": "89861e34",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cd92529",
+   "id": "acdf032c",
    "metadata": {},
    "source": [
     "For now `Feature View` is saved in Hopsworks and we can retrieve it using `FeatureStore.get_feature_view()`"
@@ -163,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "604b3c1b",
+   "id": "1d42a5eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "078d119a",
+   "id": "cd85a683",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "213473a1",
+   "id": "2615c864",
    "metadata": {},
    "source": [
     "> `FeatureView.preview_feature_vector()` returns a sample of assembled serving vector from online feature store"
@@ -205,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d2011a02",
+   "id": "767b3ca6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bf35851",
+   "id": "a5fd4481",
    "metadata": {},
    "source": [
     "> To get subset of data use `FeatureView.get_batch_data()` "
@@ -223,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c41ca588",
+   "id": "3f8bc441",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "209c95e6",
+   "id": "643e2193",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fab3815f",
+   "id": "f9c991cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8344538e",
+   "id": "84281acd",
    "metadata": {},
    "source": [
     "---\n",
@@ -283,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e0dbf1fe",
+   "id": "9c785423",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2ef5b60",
+   "id": "6c5440a1",
    "metadata": {},
    "source": [
     "### <span style=\"color:#ff5f27;\">🧑🏻‍🔬 Dataset with splits</span>\n",
@@ -333,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "40de622c",
+   "id": "674668fa",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8f4d1f5d",
+   "id": "6a673d6b",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49998b39",
+   "id": "ab350857",
    "metadata": {},
    "source": [
     "---\n",
@@ -418,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d3e99460",
+   "id": "2b5d3d7e",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6b895284",
+   "id": "8b2a70c1",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "27f9dd7c",
+   "id": "705a8181",
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "461367c1",
+   "id": "a1808b74",
    "metadata": {},
    "source": [
     "---\n",
@@ -712,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9b67f3a8",
+   "id": "5893ec5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "909ab7b6",
+   "id": "9098ff94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f58cb177",
+   "id": "9cdb35f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a6eb1bc9",
+   "id": "11b4fd63",
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ea02ec5b",
+   "id": "786f77db",
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "68bc21d0",
+   "id": "8387207e",
    "metadata": {},
    "outputs": [
     {
@@ -908,13 +921,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8cd5cac",
+   "id": "64d223ce",
    "metadata": {},
    "source": [
     "---\n",
     "## <span style=\"color:#ff5f27;\"> 🪝 Training Dataset retreival </span>\n",
     "\n",
-    "To retrieve training dataset from Feature Store we can use `get_training_dataset_splits()` or `get_training_dataset()` methods. \n",
+    "To retrieve training dataset from Feature Store we can use `get_training_data()` methods. \n",
     "\n",
     "If version is not provided - new one will be created.\n",
     "If version is provided and version exists - retrieves trainining dataset and returns as dataframe."
@@ -923,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3d177224",
+   "id": "d95b8a55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "404cfd27",
+   "id": "131cf2c4",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "57a5e4bb",
+   "id": "bef8853a",
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1099,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82330f5b",
+   "id": "31c96a19",
    "metadata": {},
    "source": [
     "---"
@@ -1095,7 +1108,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1109,7 +1122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
