--- a/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3b10e434",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Feature Engineering/Ingestion\"\n",
+    "date: 2021-02-24\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8231055e",
    "metadata": {},
    "source": [
@@ -1564,7 +1577,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1578,7 +1591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
