--- a/notebooks/featurestore/hsfs/basics/feature_exploration.ipynb
+++ b/notebooks/featurestore/hsfs/basics/feature_exploration.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "53f18ab2",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Feature Exploration\"\n",
+    "date: 2021-02-24\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ef4ad565",
    "metadata": {},
    "source": [
@@ -1601,7 +1614,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1615,7 +1628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
